--- a/bibimbop.html
+++ b/bibimbop.html
@@ -8,5 +8,20 @@
 </head>
 <body>
     <h1>Bibimbop</h1>
+    <p>This is a little more involved, but a hearty dish well worth the effort</p>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1194517.jpg&w=596&h=399&c=sc&poi=face&q=85" alt="bibimbop in a bowl">
+    <ul>Ingredients
+        <li>Half sliced carrot</li>
+        <li>half sliced cucumber</li>
+        <li>1/3 lb marinated beef</li>
+        <li>1 cup white rice (already made)</li>
+        <li>1/4 lb kimchi</li>
+    </ul>
+    <ol>Directions
+        <li>Place cooked rice, carrot, and cucumber into stone pot on stove. Medium heat</li>
+        <li>Cook beef seperate on pan. Then add to stone pot</li>
+        <li>Add kimchi</li>
+        <li>Eat and enjoy that bad jackson</li>
+    </ol>
 </body>
 </html>
