--- a/rice.html
+++ b/rice.html
@@ -11,13 +11,13 @@
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3237801.jpg&w=596&h=596&c=sc&poi=face&q=85" alt="bowl of rice">
         <p>This is the easiest way to make some tasty rice.</p>
     <ul>Ingredients
-        <li>1 cup Rice</li>
-        <li>2 cups Water</li>
+        <li>1 cup of flippin' Rice</li>
+        <li>2 cups wet Water</li>
     </ul>
     <ol>Directions
         <li>Gingerly place cup of rice into rice maker.</li>
         <li>Toss the 2 cups of water into rice maker.</li>
-        <li>Turn on rice maker and in 15-20mins, you're gonna have some awesome rice.</li>
+        <li>Turn on rice maker and in 15-20 torturous mins, you're gonna have some awesome rice.</li>
     </ol>
     </body>
 </html>
