--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Your New Favorite Recipes</h1>
-    <a href="rice.html">Rice!</a>
-    <a href="bibimbop.html">Bibimbop!</a>
+    <ul>
+        <li href="rice.html">Rice!</li>
+        <li href="bibimbop.html">Bibimbop!</li>
+    </ul>
 </body>
 </html>
