--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Your New Favorite Recipes</h1>
     <ul>
-        <li href="rice.html">Rice!</li>
-        <li href="bibimbop.html">Bibimbop!</li>
+        <li><a href="rice.html">Rice!</a></li>
+       <li><a href="bibimbop.html">Bibimbop!</a></li>
     </ul>
 </body>
 </html>
